Tic tac toe finalversion
comentado e bugfix

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                     <div class="linhas" id="linha2"></div>
                     <div class="linhas" id="linha3"></div>
                     <div class="linhas" id="linha4"></div>
-                    <div class="xo" id="xo1" onclick="playxo(1)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo2" onclick="playxo(2)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo3" onclick="playxo(3)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo4" onclick="playxo(4)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo5" onclick="playxo(5)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo6" onclick="playxo(6)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo7" onclick="playxo(7)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo8" onclick="playxo(8)"><p class="xol"><b></b></p></div>
-                    <div class="xo" id="xo9" onclick="playxo(9)"><p class="xol"><b></b></p></div>
+                    <div class="xo" id="xo1" onclick="playxo(1)"><p class="xol"></p></div>
+                    <div class="xo" id="xo2" onclick="playxo(2)"><p class="xol"></p></div>
+                    <div class="xo" id="xo3" onclick="playxo(3)"><p class="xol"></p></div>
+                    <div class="xo" id="xo4" onclick="playxo(4)"><p class="xol"></p></div>
+                    <div class="xo" id="xo5" onclick="playxo(5)"><p class="xol"></p></div>
+                    <div class="xo" id="xo6" onclick="playxo(6)"><p class="xol"></p></div>
+                    <div class="xo" id="xo7" onclick="playxo(7)"><p class="xol"></p></div>
+                    <div class="xo" id="xo8" onclick="playxo(8)"><p class="xol"></p></div>
+                    <div class="xo" id="xo9" onclick="playxo(9)"><p class="xol"></p></div>
                 </div>       
             </section>
         </div>        
