feat: px to rem

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             <section class="conteiner">
                 <div class="placar">
                     <p class="top"><b>Placar</b></p>
-                    <p class="playerx">Player X: <b id="x">0</b></p>
-                    <p class="playero">Player O: <b id="o">0</b></p>
-                    <p class="vezdo" id="vezdo">Vez do</p>
-                    <p id="vezres"><b>|Player X|</b></p>
+                    <p class="playerx">Player X:<b id="x">0</b></p>
+                    <p class="playero">Player O:<b id="o">0</b></p>
+                    <p class="vezdo" id="vezdo">Vez do <b id="vezres">|Player X|</b></p>
                 </div>
                 <div class="boxgame">
                     <div class="linhas" id="linha1"></div>
